--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -120,3 +120,8 @@
   service: name=docker enabled=yes
   notify:
     - start docker
+
+- name: docker login
+  docker_login:
+    username: "{{ dockerhub_user }}"
+    password: "{{ dockerhub_password }}"
