Cleaned up for nginx and dashboard

--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,9 +1,21 @@
-[masters]
-localhost ansible_connection=local
+[all]
+k8s-1 ansible_host=10.1.10.213 ip=10.1.10.213 access_ip=10.1.10.213
+k8s-2 ansible_host=10.1.10.204 ip=10.1.10.204 access_ip=10.1.10.204
+k8s-3 ansible_host=10.1.10.212 ip=10.1.10.212 access_ip=10.1.10.212
 
-[nodes]
-localhost ansible_connection=local
+[kube-master]
+k8s-1
 
 [etcd]
-localhost ansible_connection=local
+k8s-1
 
+[kube-node]
+k8s-1
+k8s-2
+k8s-3
+
+[k8s-cluster:children]
+kube-master
+kube-node
+
+[calico-rr]
