--- a/inventory/group_vars/all.yml.sample
+++ b/inventory/group_vars/all.yml.sample
@@ -1,5 +1,5 @@
-dockerhub_user: "magicalyak"
-dockerhub_password: "changeme"
+dockerhub_user: "nginx"
+dockerhub_password: "password"
 dockerhub_repo: nginx-plus
 dockerhub_tag: r17v1
 nginx_plus: true
