--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -2,7 +2,7 @@
 # vars file for nginx-kube-demo
 dashboard_external: "true"
 dockerhub_user: "magicalyak"
-dockerhub_password: "changeme"
+dockerhub_password: "69S-CEn-hd9-sSD"
 dockerhub_repo: nginx-plus
 dockerhub_tag: r17v1
 nginx_plus: true
