--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,22 +1,18 @@
 ---
 - name: docker login
-  docker_login:
-    username: "{{ dockerhub_user }}"
-    password: "{{ dockerhub_password }}"
-
+  command: "docker login -u {{ dockerhub_user }} -p {{ dockerhub_password }}"
+  
 - name: install nginx-plus private repo
   include: nginxrepo.yml
-  when: inventory_hostname in groups['masters']
+  when: inventory_hostname in groups['kube-master']
 
 - name: pull image for nginx-plus
-  docker_image:
-    name: "{{ dockerhub_user }}/{{ dockerhub_repo }}"
-    tag: "{{ dockerhub_tag }}"
+  command: "docker pull {{ dockerhub_user }}/{{ dockerhub_repo }}:{{ dockerhub_tag }}"
 
 - name: install nginx-plus on master
   include: ingress.yml
-  when: inventory_hostname in groups['masters']
+  when: inventory_hostname in groups['kube-master']
 
 - name: install nginx-plus on master
   include: cafe-example.yml
-  when: inventory_hostname in groups['masters']
+  when: inventory_hostname in groups['kube-master']
