fixed repo issue

--- a/roles/nginx/tasks/nginxrepo.yml
+++ b/roles/nginx/tasks/nginxrepo.yml
@@ -53,5 +53,4 @@
     target: all
     params:
       DOCKERFILE: DockerfileForPlus
-      PREFIX: "{{ dockerhub_tag }}/nginx-plus"
-
+      PREFIX: "{{ dockerhub_user }}/nginx-plus"
