--- a/roles/nginx/tasks/cafe-example.yml
+++ b/roles/nginx/tasks/cafe-example.yml
@@ -47,7 +47,7 @@
     insertafter: EOF
     path: $HOME/kubernetes-ingress/examples/complete-example/cafe-ingress.yaml
     block: |
-            - path: /coffee
+            - path: /
               backend:
                 serviceName: demo-svc
                 servicePort: 80
