fixed jinja2 warnings on when statement

--- a/roles/nginx/tasks/cafe-example.yml
+++ b/roles/nginx/tasks/cafe-example.yml
@@ -2,12 +2,12 @@
 - name: change cafe-example to include env demo variable
   file:
     src: "{{ role_path }}/files/cafe.yaml"
-    dest: $HOME/kubernetes-ingress/examples/complete-example/cafe.yaml
+    path: $HOME/kubernetes-ingress/examples/complete-example/cafe.yaml
 
 - name: add env demo service to cafe ingress
   file:
     src: "{{ role_path }}/files/cafe-example.yaml"
-    dest: $HOME/kubernetes-ingress/examples/complete-example/cafe-ingress.yaml
+    path: $HOME/kubernetes-ingress/examples/complete-example/cafe-ingress.yaml
 
 - name: deploy cafe example to kubernetes 
   shell: "/usr/local/bin/kubectl --kubeconfig /etc/kubernetes/admin.conf create -f $HOME/kubernetes-ingress/examples/complete-example/{{ item }}"
